style(demo): some update to linked datepicker component

--- a/demo/src/app/linked-datepickers/linked-datepickers.component.html
+++ b/demo/src/app/linked-datepickers/linked-datepickers.component.html
@@ -6,11 +6,12 @@
       <div class="form-group">
           <div class="input-group date" data-target-input="nearest" NgTempusdominusBootstrap>
               <input
-              [(ngModel)]="startDate"
-              (ngModelChange)="update()"
-              [options]="startOptions"
-              NgTempusdominusBootstrapInput
-              type="text" class="form-control"
+                class="form-control"
+                [(ngModel)]="startDate"
+                (ngModelChange)="update()"
+                [options]="startOptions"
+                NgTempusdominusBootstrapInput
+                type="text"
               />
               <div class="input-group-append" NgTempusdominusBootstrapToggle>
                   <div class="input-group-text"><i class="fa fa-calendar"></i></div>
@@ -22,12 +23,12 @@
       <div class="form-group">
           <div class="input-group date" data-target-input="nearest" NgTempusdominusBootstrap>
               <input
-              class="form-control datetimepicker-input"
-              [(ngModel)]="endDate"
-              (ngModelChange)="update()"
-              [options]="endOptions"
-              NgTempusdominusBootstrapInput
-              type="text" class="form-control"
+                class="form-control"
+                [(ngModel)]="endDate"
+                (ngModelChange)="update()"
+                [options]="endOptions"
+                NgTempusdominusBootstrapInput
+                type="text"
               />
               <div class="input-group-append" NgTempusdominusBootstrapToggle>
                   <div class="input-group-text"><i class="fa fa-calendar"></i></div>
@@ -46,11 +47,12 @@
           &lt;div class="form-group"&gt;
               &lt;div class="input-group date" data-target-input="nearest" NgTempusdominusBootstrap&gt;
                   &lt;input
+                  class="form-control"
                   [(ngModel)]="startDate"
                   (ngModelChange)="update()"
                   [options]="startOptions"
                   NgTempusdominusBootstrapInput
-                  type="text" class="form-control"
+                  type="text"
                   /&gt;
                   &lt;div class="input-group-append" NgTempusdominusBootstrapToggle&gt;
                       &lt;div class="input-group-text"&gt;&lt;i class="fa fa-calendar"&gt;&lt;/i&gt;&lt;/div&gt;
@@ -62,12 +64,12 @@
           &lt;div class="form-group"&gt;
               &lt;div class="input-group date" data-target-input="nearest" NgTempusdominusBootstrap&gt;
                   &lt;input
-                  class="form-control datetimepicker-input"
+                  class="form-control"
                   [(ngModel)]="endDate"
                   (ngModelChange)="update()"
                   [options]="endOptions"
                   NgTempusdominusBootstrapInput
-                  type="text" class="form-control"
+                  type="text"
                   /&gt;
                   &lt;div class="input-group-append" NgTempusdominusBootstrapToggle&gt;
                       &lt;div class="input-group-text"&gt;&lt;i class="fa fa-calendar"&gt;&lt;/i&gt;&lt;/div&gt;
