chore(demo): add simple datetimepicker & reactive forms

--- a/demo/src/app/app.component.html
+++ b/demo/src/app/app.component.html
@@ -7,7 +7,15 @@
 </header>
 
 <div class="container-fluid">
-        <app-linked-datepickers></app-linked-datepickers>
-        <app-input-only></app-input-only>
-        <app-reactive-forms></app-reactive-forms>
+        <div class="row justify-content-center">
+            <div class="col-8">
+                    <app-simple></app-simple>
+                    <hr/>
+                    <app-linked-datepickers></app-linked-datepickers>
+                    <hr/>
+                    <app-input-only></app-input-only>
+                    <hr/>
+                    <app-reactive-forms></app-reactive-forms>
+            </div>
+        </div>
 </div>
