--- a/demo/src/styles.css
+++ b/demo/src/styles.css
@@ -16,3 +16,7 @@
     margin-bottom: 1rem;
     -ms-overflow-style: -ms-autohiding-scrollbar;
 }
+hr {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
