chore(demo): add inline example

--- a/demo/src/app/app.component.html
+++ b/demo/src/app/app.component.html
@@ -16,6 +16,8 @@
                     <app-input-only></app-input-only>
                     <hr/>
                     <app-reactive-forms></app-reactive-forms>
+                    <hr/>
+                    <app-inline></app-inline>
             </div>
         </div>
 </div>
