test for bootstrap3

--- a/demo/src/app/linked-datepickers/linked-datepickers.component.html
+++ b/demo/src/app/linked-datepickers/linked-datepickers.component.html
@@ -13,7 +13,7 @@
                 NgTempusdominusBootstrapInput
                 type="text"
               />
-              <div class="input-group-append" NgTempusdominusBootstrapToggle>
+              <div class="input-group-addon" NgTempusdominusBootstrapToggle>
                   <div class="input-group-text"><i class="fa fa-calendar"></i></div>
               </div>
           </div>
@@ -30,7 +30,7 @@
                 NgTempusdominusBootstrapInput
                 type="text"
               />
-              <div class="input-group-append" NgTempusdominusBootstrapToggle>
+              <div class="input-group-addon" NgTempusdominusBootstrapToggle>
                   <div class="input-group-text"><i class="fa fa-calendar"></i></div>
               </div>
           </div>
@@ -54,7 +54,7 @@
                   NgTempusdominusBootstrapInput
                   type="text"
                   /&gt;
-                  &lt;div class="input-group-append" NgTempusdominusBootstrapToggle&gt;
+                  &lt;div class="input-group-addon" NgTempusdominusBootstrapToggle&gt;
                       &lt;div class="input-group-text"&gt;&lt;i class="fa fa-calendar"&gt;&lt;/i&gt;&lt;/div&gt;
                   &lt;/div&gt;
               &lt;/div&gt;
@@ -71,7 +71,7 @@
                   NgTempusdominusBootstrapInput
                   type="text"
                   /&gt;
-                  &lt;div class="input-group-append" NgTempusdominusBootstrapToggle&gt;
+                  &lt;div class="input-group-addon" NgTempusdominusBootstrapToggle&gt;
                       &lt;div class="input-group-text"&gt;&lt;i class="fa fa-calendar"&gt;&lt;/i&gt;&lt;/div&gt;
                   &lt;/div&gt;
               &lt;/div&gt;
