--- a/demo/src/app/reactive-forms/reactive-forms.component.html
+++ b/demo/src/app/reactive-forms/reactive-forms.component.html
@@ -14,7 +14,7 @@
                     type="text"
                     [ngClass]="{'is-invalid': form.get('date').errors && form.get('date').touched}"
                   />
-                  <div class="input-group-append" NgTempusdominusBootstrapToggle>
+                  <div class="input-group-addon" NgTempusdominusBootstrapToggle>
                       <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                   </div>
               </div>
@@ -56,7 +56,7 @@
                     NgTempusdominusBootstrapInput
                     type="text"
                     /&gt;
-                    &lt;div class="input-group-append" NgTempusdominusBootstrapToggle&gt;
+                    &lt;div class="input-group-addon" NgTempusdominusBootstrapToggle&gt;
                         &lt;div class="input-group-text"&gt;&lt;i class="fa fa-calendar"&gt;&lt;/i&gt;&lt;/div&gt;
                     &lt;/div&gt;
                 &lt;/div&gt;
