--- a/demo/src/app/simple/simple.component.html
+++ b/demo/src/app/simple/simple.component.html
@@ -12,7 +12,7 @@
                 NgTempusdominusBootstrapInput
                 type="text"
               />
-              <div class="input-group-append" NgTempusdominusBootstrapToggle>
+              <div class="input-group-addon" NgTempusdominusBootstrapToggle>
                   <div class="input-group-text"><i class="fa fa-calendar"></i></div>
               </div>
           </div>
@@ -49,7 +49,7 @@
                   NgTempusdominusBootstrapInput
                   type="text"
                   /&gt;
-                  &lt;div class="input-group-append" NgTempusdominusBootstrapToggle&gt;
+                  &lt;div class="input-group-addon" NgTempusdominusBootstrapToggle&gt;
                       &lt;div class="input-group-text"&gt;&lt;i class="fa fa-calendar"&gt;&lt;/i&gt;&lt;/div&gt;
                   &lt;/div&gt;
               &lt;/div&gt;
